# finetune-qwen

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml  requirements.txt
benchmarks/: scoring.py
data/: datasets.py
inference/: model.py  prompts.py
src/ftqw/benchmarks/: __init__.py  scoring.py
src/ftqw/cli/: benchmark.py  download.py  finetune.py  main.py  train.py
src/ftqw/data/: __init__.py  datasets.py
src/ftqw/inference/: __init__.py  model.py  prompt.py
