[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetune-qwen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "datasets>=2.19",
    "rouge-score>=0.1.3",
    "bert-score>=0.3.13",
    "alignscore>=0.1.4",
    "unieval @ git+https://github.com/maszhongming/UniEval.git",
    "trl>=0.8",
    "click>=8.1",
    "tqdm",
    "numpy",
    "pandas",
]

[project.scripts]
ftqw = "ftqw.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ftqw"]

[tool.hatch.build.targets.editable]
packages = ["src/ftqw"]
