[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "finetune-qwen"
description = "Fine-tune Qwen models on speech-to-text transcripts for improved summarization"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "datasets>=2.19",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "trl>=0.8",
    "llama-cpp-python>=0.3",
    "click>=8.1",
    "tqdm",
    "numpy",
    "pandas",
]

[project.scripts]
ftqw = "ftqw.cli.main:cli"

[tool.flit.module]
name = "ftqw"
path = "src"
